@@ -31,3 +31,4 @@ ltmain.sh
 missing
 mkinstalldirs
 stamp-h1
+gwenhywfar.pc
