@@ -1,3 +1,7 @@
+2005-09-07   Christian Stimming <stimming@tuhh.de>
+
+	* gwenhywfar.pc.in: Add configuration file for pkg-config, let
+	this also be installed.
 
 2005/09/05: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
